refactor(logging): 优化日志变量命名统一小写log
- 将所有类中的日志实例名由大写 LOG 改为小写 log，提高代码一致性
- 移除CheckpointService接口中download方法的Throwable抛出声明
- 优化ConfigRuleProvider中集合转List方式，避免不必要的Stream转换
- 修改NextwikiCacheService缓存读取异常返回Optional.empty而非null，提升安全性
- 调整RoleCacheService查询时方法参数传递方式，简化代码结构
- 更新pom.xml增加质量守护相关profile和配置，补充依赖扫描及覆盖率门禁功能
- 优化分布式模块相关类日志输出，统一日志变量命名及布局格式
- 细节调整灰度负载均衡器、模板工具类等内logger使用，统一小写log访问